WIP first working version of the login screen